--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
-PORT=5002
-JWT_SECRET="abababa"
+PORT=your-port-number
+JWT_SECRET="your_jwt_secret_here"
 
-MONGODB_URI="mongodb+srv://aln:Aalluri%401234@cluster0.4avhzmf.mongodb.net/chat-app"
+MONGODB_URI="your_mongodb_connection_uri_here"
 
+CLOUDINARY_CLOUD_NAME="your_cloudinary_cloud_name_here"
+CLOUDINARY_API_KEY="your_cloudinary_api_key_here"
+CLOUDINARY_API_SECRET="your_cloudinary_api_secret_here"
 
-CLOUDINARY_CLOUD_NAME='dttowbdxh'
-CLOUDINARY_API_KEY='487437911893591'
-CLOUDINARY_API_SECRET='-u1kstTn9dfl0fTondcM9FRskwg'
-GEMINI_API_KEY='AIzaSyA7DborpvildMkrwAIqe9rcwjz5AzFdUKQ'
+GEMINI_API_KEY="your_gemini_api_key_here"
